[project]
name = "cimsparql"
description = "CIM query utilities"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Statnett Datascience", email = "Datascience.Drift@Statnett.no" },
]
dependencies = [
  "httpx>=0.27.2",
  "numpy>=1.9.0",
  "pandas>=2.2.3",
  "pandera[pandas]>=0.24.0",
  "polyfactory>=2.17.0",
  "pydantic>=2.9.2",
  "rdflib>=7.0.0",
  "sparqlwrapper>=2.0.0",
  "tenacity>=9.0.0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
  "asyncio>=3.4.3",
  "coverage[toml]>=7.6.1",
  "pandas-stubs>=2.2.3.250308",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-httpserver>=1.1.0",
  "pytest-integration>=0.2.3",
  "pytest-profiling>=1.7.0",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
  "if verbose:",
  "if 0:",
  "if False:",
  "if TYPE_CHECKING:",
]
skip_covered = true
show_missing = true
precision = 2

[tool.coverage.run]
branch = true
source = ["cimsparql", "conftest", "tests"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore: NQuadsSerializer does not use custom encoding. Given encoding was.*:UserWarning",
  "ignore: Use of deprecated default '__check_model__'. Deprecated in polyfactory v2.22.0.*:DeprecationWarning",
]
log_file = "pytest.log"
log_file_format = "%(asctime)s - %(name)s - %(levelname)s: %(message)s"
markers = [
  "integration: Mark test as an integration test",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
norecursedirs = "_build tmp*  __pycache__ src prof wheel_files tests/t_utils"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "BLE001",
  "COM812",
  "D101",
  "D102",
  "D103",
  "D105",
  "D107",
  "D203",
  "D213",
  "D413",
  "EM101",
  "EM102",
  "FBT001",
  "FBT002",
  "FIX002",
  "S101",
  "TD002",
  "TD003",
  "TRY003",
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Exclude a variety of commonly ignored directories.
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["A001", "INP001", "D100"]
"src/cimsparql/data_models.py" = ["N815"]
"tests/**/*.py" = ["D100", "D101", "D103", "D104", "PLR2004"]
"tests/test*.py" = ["ANN201"]

[tool.ruff.lint.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["pandera.dataframe_check"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
# Declare the default aliases.
pandera = "pa"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
